# yubikey-personalization

./: .gitignore  69-onlykey.rules  70-onlykey.rules  AUTHORS  Makefile.am  NEWS  README  configure.ac  libokpers-1.la  libokpers-1.map  libokpers_args.la  okchalresp.1.adoc  okchalresp.c  okinfo.1.adoc  okinfo.c  okpbkdf2.c  okpbkdf2.h  okpers-1.pc.in  okpers-args.c  okpers-args.h  okpers-json.c  okpers-json.h  okpers-nojson.c  okpers-version.c  okpers-version.h  okpers-version.h.in  okpers.c  okpers.h  okpers4mac.mk  okpers4win.mk  okpers_lcl.c  okpers_lcl.h  okpersonalize.1.adoc  okpersonalize.c  ykchalresp.c  ykinfo.c  ykpers-1.pc.in  ykpers4mac.mk  ykpers4win.mk
contrib/: oath-unlock-reprogram.sh  programming.sh
doc/: Compatibility.asciidoc  USB-Hid-Issue.asciidoc
okcore/: Makefile.am  okbzero.h  okcore.c  okcore.h  okcore_backend.h  okcore_lcl.h  okcore_libusb-1.0.c  okcore_libusb.c  okcore_osx.c  okcore_stub.c  okcore_windows.c  okdef.h  okstatus.c  okstatus.h  oktsd.h
tests/: Makefile.am  selftest.c  test_args_to_config.c  test_json.c  test_ndef_construction.c  test_ok_utilities.c  test_okpbkdf2.c  test_threaded_calls.c  test_yk_utilities.c
ykcore/: Makefile.am  okcore.c  okcore.h  ykcore.c  ykcore_lcl.h  ykcore_libusb-1.0.c  ykcore_libusb.c  ykcore_original.h  ykcore_osx.c  ykcore_stub.c  ykcore_windows.c  ykstatus.h
